# football_statistics

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dump_rds.sql  init_app_base.py  init_db.sh  pyproject.toml  treinos_rf.csv
Core/: calculo_detector_arbitragem.py  dashboards_analytics.py  feature_config.py  features_builder.py  football_analytics.py  football_classification.py  football_ml.py  insert_data.py  processar_estatistica_acumulada.py  run_day_update.py  run_tests_models.py  run_update_matches.py  spark_manager.py  stat_mapping.yml  training_models_previsibility.py  training_models_probability.py
database/: api_data_manager.py  calc_arb.py  create_tables.py  crud.py  data_processor.py  db.py  fecth_matches.py  init_base.py  load_from_parquet.py
fallback_predictions/: match_1203240_20250517_115111.parquet  match_1203242_20250517_115147.parquet  match_1203243_20250517_115220.parquet  match_1208355_20250426_165439.parquet  match_1208356_20250426_165453.parquet  match_1208358_20250428_124214.parquet  match_1208359_20250426_165509.parquet  match_1208361_20250426_125608.parquet  match_1208361_20250426_130110.parquet  match_1208361_20250426_165344.parquet  match_1208362_20250426_125550.parquet  match_1208362_20250426_130053.parquet  match_1208362_20250426_165320.parquet  match_1208362_20250426_170649.parquet  match_1208368_20250505_205507.parquet  match_1208376_20250512_000823.parquet  match_1208377_20250512_000755.parquet  match_1208378_20250511_234706.parquet  match_1208379_20250511_234800.parquet  match_1208381_20250511_234537.parquet  match_1208384_20250516_161653.parquet  match_1208387_20250516_161715.parquet  match_1208791_20250505_205550.parquet  match_1208801_20250511_235021.parquet  match_1208802_20250511_235216.parquet  match_1208808_20250511_235117.parquet  match_1208810_20250515_120134.parquet  match_1208811_20250515_120028.parquet  (+213 more)
frontend/: app.py  bets.csv  (+8 more)
(+4038 files in other folders)
